# sunpower-monitor

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  day.csv  docker-compose.yml
.github/workflows/: release.yml
apps/android/: README.md  key.properties.example  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/android/app/src/main/res/xml/: network_security_config.xml
apps/api/: README.md  pyproject.toml
apps/api/src/solar_api/: main.py
apps/cloud-api/: pyproject.toml
apps/cloud-api/src/solar_cloud_api/: __init__.py  main.py
apps/mobile/: README.md
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/components/: DayScrubber.tsx  Heatmap.tsx  Overview.tsx  PowerFlow.tsx
database/: migrate.sh
database/migrations/: 001_init.sql  002_seed_home_site.sql
docs/: architecture.md  backup-restore.md  cloud-deploy.md  cloud-droplet-setup.md  cloud-remaining-steps.md  data-model.md  mobile-ui.md  polling-safety.md  prior-art.md  pvs6-discovery.md  releasing.md  remote-access.md  troubleshooting.md
docs/adr/: 0001-architecture-choice.md  0002-measurement-schema.md
docs/api/: openapi.json
docs/discovery/: phase-1-plan.md  phase-2-plan.md
fixtures/pvs6/: README.md  supervisor-info.json  vars-inverter.json  vars-livedata.json  vars-meter.json  vars-sw-rev.json
infrastructure/cloud/: .env.example  Caddyfile  README.md  docker-compose.yml
infrastructure/docker/: Dockerfile.api  Dockerfile.cloud-api  Dockerfile.cloud-sync  Dockerfile.collector  Dockerfile.db  Dockerfile.migrate  Dockerfile.web  README.md  nginx-web.conf
scripts/: publish-release.ps1  redact_fixtures.py
services/cloud-sync/: pyproject.toml
services/cloud-sync/src/solar_cloud_sync/: __init__.py  cli.py
services/collector/: README.md  pyproject.toml
services/collector/src/solar_collector/: __init__.py  cli.py  config.py  models.py  parse.py  poller.py  safety.py
services/collector/src/solar_collector/datasource/: __init__.py  base.py  fixture.py  varserver.py
services/collector/tests/: test_fixtures_and_safety.py  test_varserver_mock.py
(+9 files in other folders)
